--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.6.0",
     "i": "^0.3.7",
     "npm": "^10.2.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1",
