--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "npm": "^10.2.3",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
